REGRESSION (r130699): 5 various fast/ tests started failing https://bugs.webkit.org/show_bug.cgi?id=98729

Reviewed by Xan Lopez.

Source/WebCore:

Do not try to remove the URL fragment for data URLs. This will likely
just corrupt the URL.

No new tests. This unskips some previously failing tests.

* platform/network/soup/ResourceRequestSoup.cpp:
(WebCore::ResourceRequest::urlStringForSoup): Do nothing for data URLs.

LayoutTests:

Unskip some tests which are now passing.

* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/117878@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@131942 268f45cc-cd09-0410-ab3c-d52691b4dbfc